--- a/wp-content/themes/contango/style.css
+++ b/wp-content/themes/contango/style.css
@@ -122,8 +122,9 @@ body {
 
 #headimg #logo-text .site-name  {
 	display: block;
-	font-family: 'Nixie One', cursive;
-	font-size: 28px; 
+	font-family: 'Open Sans', sans-serif;
+	font-size: 34px;
+	font-weight: bold; 
 	line-height: 34px; 
 }
 
@@ -230,7 +231,7 @@ p img {
 */
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Nixie One', cursive;
+	font-family: 'Open Sans', sans-serif;
 	color: #2f2f2f;
 	font-weight: normal;
 	clear: both;
@@ -389,7 +390,7 @@ a:visited {
 
 a:hover,
 a:focus {
-	color: #6ea50a;
+	color: #467da2;
 }
 
 a img {
@@ -597,8 +598,8 @@ input[type="submit"]:active,
 input[type="reset"]:active,
 input[type="button"]:active {
 	color: #fff;
-	background-color: #6ea50a;
-	border: 1px solid #6ea50a;
+	background-color: #467da2;
+	border: 1px solid #467da2;
 }
 
 /**
@@ -905,7 +906,7 @@ dl.gallery-item img {
 
 #sidebar a:hover,
 #sidebar a:focus {
-	color: #6ea50a;
+	color: #467da2;
 }
 
 /**
@@ -1001,7 +1002,7 @@ dl.gallery-item img {
 
 .entry-title a:focus,
 .entry-title a:hover {
-	color: #6ea50a;
+	color: #467da2;
 }
 
 /**
@@ -1047,7 +1048,7 @@ dl.gallery-item img {
 
 .entry-meta a:hover,
 .entry-meta a:focus {
-	color: #6ea50a;
+	color: #467da2;
 }
 
 .entry-meta-sep {
@@ -1102,7 +1103,7 @@ dl.gallery-item img {
 .cat-links a:focus,
 .tag-links a:hover,
 .tag-links a:focus {
-	color: #6ea50a;
+	color: #467da2;
 }
 
 /**
@@ -1265,7 +1266,7 @@ a.more-link:visited {
 .page-link a:hover,
 .page-link a span:hover {
 	color: #fff;
-	background-color: #6ea50a;
+	background-color: #467da2;
 }
 
 #loop-nav-numeric .assistive-text,
@@ -1301,7 +1302,7 @@ a.more-link:visited {
 
 .nav-numeric span.current {
 	color: #fff;
-	background-color: #6ea50a;
+	background-color: #467da2;
 }
 
 /* =Nav Numeric Page Links
@@ -1309,7 +1310,7 @@ a.more-link:visited {
 
 .page-link span {
 	color: #fff;
-	background-color: #6ea50a;
+	background-color: #467da2;
 }
 
 .page-link a span {
