--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -22,8 +22,8 @@ p {
     margin: 0 0 24px;
 }
 body {
-	line-height: 1.5;
-    font-family: "ff-scala-web-1","ff-scala-web-2","Georgia",sans-serif;
+	line-height: 1.4;
+    font-family: 'Open Sans', sans-serif;
     text-rendering: optimizeLegibility;
     color: #333;
 }
@@ -184,7 +184,7 @@ footer .screen-reader-text,
     padding: 30px 30px 30px 0px;
     margin: 10px 0px;
     clear: both;
-    background: url('images/header-bg.png') right bottom no-repeat;
+
 }
 
 #masthead h1{
@@ -197,7 +197,7 @@ footer .screen-reader-text,
 
 #masthead a { text-decoration: none; }
 #masthead hgroup a{ text-decoration: none; color: #333;}
-#masthead hgroup a:hover { color: rgb(239, 77, 60); }
+#masthead hgroup a:hover { color: #467da2; }
 #masthead h2{
     font-style: italic;
     font-size: 1.125em;
@@ -287,7 +287,7 @@ footer .screen-reader-text,
 
 /* Navigation */
 .nav-single a,
-.navigation a{ color: rgb(239, 77, 60); }
+.navigation a{ color: #467da2; }
 .previous-image,
 .nav-previous{
 	float: left;
@@ -328,7 +328,7 @@ article.format-link header,
     text-align: center;
     
     display: inline-block;
-    background-color: rgb(239, 77, 60);
+    background-color: #467da2;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -339,7 +339,7 @@ article.format-link header,
 #colophon{
     color: #FFF;
     margin-top: 100px;
-    background-color: rgb(239, 77, 60);
+    background-color: #467da2;
     clear: both;
     -webkit-box-shadow: inset 0px 2px 3px -1px rgba(51, 51, 51, 0.5);
     box-shadow: inset 0px 3px 6px -1px rgba(51, 51, 51, 0.3);
@@ -397,7 +397,7 @@ video {
 .comments-area a,
 .site-content article a{ 
 	text-decoration: none;
-	color:  rgb(239, 77, 60);
+	color:  #467da2;
 }
 .entry-content img,
 .comment-content img,
@@ -425,7 +425,7 @@ img.wp-post-image {
 }
 
 .entry-title a:hover{
-    color: rgb(239, 77, 60);
+    color: #467da2;
 }
 
 .comment-awaiting-moderation,
@@ -454,7 +454,7 @@ article.format-quote .entry-content blockquote,
 	background: url("images/comment.png") no-repeat;
 	padding: 0 0 0 20px;
 	line-height: 16px;
-    color: rgb(239, 77, 60);
+    color: #467da2;
 }
 
 .entry-content,
@@ -570,7 +570,7 @@ article.format-quote .entry-content blockquote,
 .entry-content li ul li:before,
 .comment-content li ul li:before{
     content: "\00a7"; 
-	color: rgb(239, 77, 60); 
+	color: #467da2; 
     font-weight: bolder;
     margin-right: 5px;  
 }
@@ -581,7 +581,7 @@ article.format-quote .entry-content blockquote,
 .comment-content li ol li:before { 
 	content: counter(li) ". "; 
 	counter-increment: li;
-    color: rgb(239, 77, 60); 
+    color: #467da2; 
     font-weight: bolder;
 }
 
@@ -718,7 +718,7 @@ img.wp-smiley,
 }
 a img:hover,
 .gallery .gallery-icon img:hover{
-    border-color: rgb(239, 77, 60) !important;
+    border-color: #467da2 !important;
 }
 .image-attachment div.attachment {
     text-align: center;
@@ -801,7 +801,7 @@ article.sticky .featured-post,
 article.format-link header{
 	padding: 10px 10px 10px;
 	background-color: #E2E2E2;
-	border-left: 10px solid rgb(239, 77, 60);
+	border-left: 10px solid #467da2;
     margin-bottom: 10px;
     text-shadow: 1px 1px #FAFAFA;
     -webkit-border-radius: 4px;
@@ -817,7 +817,7 @@ article.format-aside .aside .entry-content{
 	padding: 24px 24px 0;
 	padding: 1.714285714rem;
 	background-color: #E2E2E2;
-	border-left: 22px solid rgb(239, 77, 60);
+	border-left: 22px solid #467da2;
     margin-bottom: 10px;
     text-shadow: 1px 1px #FAFAFA;
     -webkit-border-radius: 4px;
@@ -882,7 +882,7 @@ article.format-quote .entry-content blockquote{
 .search-header h1{background: url('images/search.png') 0 center no-repeat #E2E2E2;}
 .search-header h1 span,
 .archive-header h1 span a,
-.archive-header h1 span{ color: rgb(239, 77, 60); }
+.archive-header h1 span{ color: #467da2; }
 
 article.sticky {
     -webkit-box-shadow: 0px 3px 3px 0px rgba(51, 51, 51, 0.5);
