--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -435,6 +435,7 @@ article.format-quote .entry-content blockquote,
 .widget-area .widget,
 .entry-meta{
 	font-size: 0.8em;
+	background-color: #E2E2E2;
 	-moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -442,9 +443,6 @@ article.format-quote .entry-content blockquote,
     padding: 4px;
     text-shadow: 1px 1px #FAFAFA;
     margin-bottom: 10px;
-    font-weight: 600;
-letter-spacing: -1px;
-margin-bottom: 20px;
 }
 .entry-meta h1{
     font-size: 1.5em;
