--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -190,7 +190,7 @@ footer .screen-reader-text,
 
 #masthead h1{
     text-align: left;
-    font-size: 4.5em;
+    font-size: 45px;
     line-height: 100%;
     font-weight: normal;
     font-family: "ff-scala-web-1","ff-scala-web-2","Georgia",sans-serif;
@@ -419,7 +419,7 @@ img.wp-post-image {
     margin: 0 0 5px;
     font-size: 31.5px;
     font-weight: 400;
-    text-shadow: 2px 2px #fff;
+    text-shadow: none;
 }
 .entry-title a{
     color: #333;
@@ -441,7 +441,7 @@ article.format-quote .entry-content blockquote,
     border-radius: 4px;
     display: inline-block;
     padding: 4px;
-    text-shadow: 1px 1px #FAFAFA;
+    text-shadow: none;
     margin-bottom: 10px;
 }
 .entry-meta h1{
@@ -804,7 +804,7 @@ article.format-link header{
 	background-color: #E2E2E2;
 	border-left: 10px solid #467da2;
     margin-bottom: 10px;
-    text-shadow: 1px 1px #FAFAFA;
+    text-shadow: none;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -820,7 +820,7 @@ article.format-aside .aside .entry-content{
 	background-color: #E2E2E2;
 	border-left: 22px solid #467da2;
     margin-bottom: 10px;
-    text-shadow: 1px 1px #FAFAFA;
+    text-shadow: none;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -972,7 +972,8 @@ article.sticky,
 }
 
 .widget-area .widget .widget-title{
-    font-size: 1.5em;
+    font-size: 2.0em;
+    margin-bottom: 10px;
 }
 
 /* =Footer widgets
