--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -434,7 +434,7 @@ img.wp-post-image {
 article.format-quote .entry-content blockquote,
 .widget-area .widget,
 .entry-meta{
-	font-size: 0.8em;
+	font-size: 1.2em;
 	background-color: #E2E2E2;
 	-moz-border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -969,6 +969,7 @@ article.sticky,
 }
 .widget-area .widget li{
     margin-bottom: 2px;
+    padding-left: 5px;
 }
 
 .widget-area .widget .widget-title{
