--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -19,7 +19,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	vertical-align: baseline;
 }
 p {
-    margin: 0 0 24px;
 }
 body {
 	line-height: 1.4;
@@ -188,7 +187,7 @@ footer .screen-reader-text,
 
 #masthead h1{
     text-align: left;
-    font-size: 4.5em;
+    font-size: 3.5em;
     line-height: 100%;
     font-weight: normal;
     font-family: "ff-scala-web-1","ff-scala-web-2","Georgia",sans-serif;
@@ -414,10 +413,10 @@ img.wp-post-image {
 
 .entry-title{
     color: #333;
-    margin: 0 0 5px;
+    margin: 0 0 10px;
     font-size: 31.5px;
     font-weight: 400;
-    text-shadow: 2px 2px #fff;
+    text-shadow: none;
 }
 .entry-title a{
     color: #333;
@@ -439,7 +438,7 @@ article.format-quote .entry-content blockquote,
     border-radius: 4px;
     display: inline-block;
     padding: 4px;
-    text-shadow: 1px 1px #FAFAFA;
+    text-shadow: none;
     margin-bottom: 10px;
 }
 .entry-meta h1{
@@ -520,7 +519,7 @@ article.format-quote .entry-content blockquote,
 .comment-content p,
 .mu_register p {
 	margin: 0 0 24px;
-	margin: 0 0 1.714285714rem;
+	margin: 0 0 0.7rem;
 	line-height: 1.714285714;
 }
 .entry-content ol,
@@ -802,7 +801,7 @@ article.format-link header{
 	background-color: #E2E2E2;
 	border-left: 10px solid #467da2;
     margin-bottom: 10px;
-    text-shadow: 1px 1px #FAFAFA;
+    text-shadow: none;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -818,7 +817,7 @@ article.format-aside .aside .entry-content{
 	background-color: #E2E2E2;
 	border-left: 22px solid #467da2;
     margin-bottom: 10px;
-    text-shadow: 1px 1px #FAFAFA;
+    text-shadow: none;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
