--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -180,7 +180,7 @@ footer .screen-reader-text,
     border-width: 1px 0px;
     border-color: rgb(204, 204, 204);
     padding: 30px 30px 30px 0px;
-    margin: 10px 0px;
+    margin: 30px 0px;
     clear: both;
 
 }
@@ -449,8 +449,7 @@ article.format-quote .entry-content blockquote,
 }
 .comments-link,
 .reply{
-	background: url("images/comment.png") no-repeat;
-	padding: 0 0 0 20px;
+	padding: 0 0 15px 0px;
 	line-height: 16px;
     color: #467da2;
 }
