--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -885,6 +885,7 @@ article.format-quote .entry-content blockquote{
 .disqus_thread{
 	background: #fcfcfc;
 	margin-bottom: 10px;
+	padding: 15px;
 	-moz-box-shadow: 0 1px 4px rgba(176, 176, 178, 0.9);
 	-webkit-box-shadow: 0 1px 4px rgba(176, 176, 178, 0.9);
 	box-shadow: 0 1px 4px rgba(176, 176, 178, 0.9);
