--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -25,7 +25,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     text-rendering: optimizeLegibility;
     color: #333;
-    background: url(http://subtlepatterns.com/patterns/subtlenet2.png);
+    background: url(images/subtlenet2.png);
     /*background: url(images/rig.jpg) no-repeat center center fixed;*/ 
 	  -webkit-background-size: cover;
 	  -moz-background-size: cover;
