--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -9,6 +9,7 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: dark,light,gray,one-column,two-columns,right-sidebar,flexible-width,featured-images,flexible-header,front-page-post-form,post-formats,rtl-language-support,sticky-post,theme-options,threaded-comments,translation-ready
 Text Domain: food_diet
+ background: url(images/rig.jpg) no-repeat center center fixed;
 */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -26,7 +27,7 @@ body {
     text-rendering: optimizeLegibility;
     color: #333;
     background: url(images/subtlenet2.png);
-    /*background: url(images/rig.jpg) no-repeat center center fixed;*/ 
+
 	  -webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
