--- a/wp-content/themes/food-and-diet/style.css
+++ b/wp-content/themes/food-and-diet/style.css
@@ -26,12 +26,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     text-rendering: optimizeLegibility;
     color: #333;
-    background: url(images/subtlenet2.png);
-
-	  -webkit-background-size: cover;
-	  -moz-background-size: cover;
-	  -o-background-size: cover;
-	  background-size: cover;
 }
 
 ol,
@@ -260,9 +254,9 @@ footer .screen-reader-text,
 	background: #fcfcfc;
 	margin-top: -20px;
 	border-bottom: 1px solid #eee;
-	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35), 0px -1px 1px rgba(0,0,0,.15);
-	-moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35), 0px -1px 1px rgba(0,0,0,.15);
-	box-shadow: 0px 1px 1px rgba(0,0,0,.35), 0px -1px 1px rgba(0,0,0,.15);
+	-webkit-box-shadow: 0 2px 4px -2px #ddd;
+	-moz-box-shadow: 0 2px 4px -2px #ddd;
+	box-shadow: 0 2px 4px -2px #ddd;
 }
 .inner-header{
 	max-width: 1170px;
@@ -806,7 +800,7 @@ a img:hover,
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
 	hyphens: auto;
-    margin-bottom: 1em;
+    margin-bottom: 2.5em;
     background: #fcfcfc;
 	padding: 15px;
 	-webkit-border-radius: 4px;
@@ -1004,9 +998,9 @@ article.sticky,
 .widget-area .widget{
     display: block;
     padding: 10px;
-    -moz-box-shadow: 0 1px 1px rgba(176, 176, 178, 0.9);
-	-webkit-box-shadow: 0 1px 1px rgba(176, 176, 178, 0.9);
-	box-shadow: 0 1px 1px rgba(176, 176, 178, 0.9);
+    -webkit-box-shadow: 0 2px 4px -2px #ddd;
+	-moz-box-shadow: 0 2px 4px -2px #ddd;
+	box-shadow: 0 2px 4px -2px #ddd;
 }
 .widget-area .widget li{
     margin-bottom: 2px;
